implemented cleaner image editing library

--- a/index.html
+++ b/index.html
@@ -1,150 +1,199 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<link rel="icon" type="image/x-icon" href="/icon.ico">
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>Text Art Creator</title>
-		<link rel="stylesheet" type="text/css" href="style.css">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-	</head>
-	<body>
 
-		<div>
-			<button id="reset">Reset</button> <button id="new">New File</button> font size: <input type="text" id="size" value="16" style="width: 40px" /> px
-		</div>
-		<div>
-			Line Color: <select id="foreground">
-				<option>░</option>
-				<option>▒</option>
-				<option selected="selected">▓</option>
-				<option>.</option>
-				<option>*</option>
-				<option>$</option>
-				<option>#</option>
-				<option>@</option>
-				<option>other</option>
-			</select>
-			<input type="hidden" id="foreground_other" style="width:15px;" maxlength="1" value="#"/>
-			Background Color: <select id="background">
-				<option selected="selected">░</option>
-				<option>▒</option>
-				<option>▓</option>
-				<option>.</option>
-				<option>*</option>
-				<option>$</option>
-				<option>#</option>
-				<option>@</option>
-				<option>other</option>
-			</select>
-			<input type="hidden" id="background_other"style="width:15px;"  maxlength="1" value=" "/>
+<head>
+	<link rel="icon" type="image/x-icon" href="/icon.ico">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<title>Text Art Creator</title>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="./style.css">
+</head>
 
-		</div>
-		<table>
-			<tr>
-				<td>
-					<table id="toolT" class="toolbox" oncontextmenu="return false;" style='-moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none;'  unselectable='on' onselectstart='return false;'  onmousedown='return false;'>
-						<tr>
-							<td selected value='0'>
-								Pen
-							</td>
-							<td value='1'>
-								Line
-							</td>
-						</tr>
-						<tr>
-							<td value='2'>
-								Elipse
-							</td>
-							<td value='3'>
-								Rectangle
-							</td>
-						</tr>
-					</table>
-					<table id="penT" class="toolbox" oncontextmenu="return false;" style='-moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none;'  unselectable='on' onselectstart='return false;'  onmousedown='return false;'>
-						<tr>
-							<td selected value='{"0":[0]}'>
-								▓
-							</td>
-							<td value='{"0":[0,1],"1":[0,1]}'>
-								▓▓<br>
-								▓▓
-							</td>
-						</tr>
-						<tr>
-							<td value='{"-1":[0],"0":[-1,0,1],"1":[0]}'>
-								▓<br>
-								▓▓▓<br>
-								▓
-							</td>
-							<td value='{"-1":[-1,0,1],"0":[-1,0,1],"1":[-1,0,1]}'>
-								▓▓▓<br>
-								▓▓▓<br>
-								▓▓▓
-							</td>
-						</tr>
-						<tr>
-							<td value='{"-1":[0,1],"0":[-1,0,1,2],"1":[0,1]}'>
-								▓▓<br>
-								▓▓▓▓<br>
-								▓▓
-							</td>
-							<td value='{"-1":[-1,0,1,2],"0":[-1,0,1,2],"1":[-1,0,1,2]}'>
-								▓▓▓▓<br>
-								▓▓▓▓<br>
-								▓▓▓▓
+<body>
+	<div>
+		<button id="resetBtn">Reset</button> <button id="newBtn">New File</button> font size: <input type="text" id="sizeTextbox" value="16" /> px
+	</div>
+	<div>
+		Line Color: 
+		<select id="fgSelect">
+			<option value="░">░</option>
+			<option value="▒">▒</option>
+			<option value="▓" selected>▓</option>
+			<option value=".">.</option>
+			<option value="*">*</option>
+			<option value="$">$</option>
+			<option value="#">#</option>
+			<option value="@">@</option>
+			<option value="other">other</option>
+		</select>
+		<input type="hidden" id="fgTextbox" maxlength="1" value="#" /> 
+		Background Color: 
+		<select id="bgSelect">
+			<option value="░" selected>░</option>
+			<option value="▒">▒</option>
+			<option value="▓">▓</option>
+			<option value=".">.</option>
+			<option value="*">*</option>
+			<option value="$">$</option>
+			<option value="#">#</option>
+			<option value="@">@</option>
+			<option value="other">other</option>
+		</select>
+		<input type="hidden" id="bgTextbox" maxlength="1" value=" " />
 
-							</td>
-						</tr>
-						<tr>
-							<td value='{"-1":[0,1],"0":[-1,0,1,2],"1":[-1,0,1,2],"2":[0,1]}'>
-								▓▓<br>
-								▓▓▓▓<br>
-								▓▓▓▓<br>
-								▓▓
+	</div>
+	<table>
+		<tr>
+			<td>
+				<table>
+					<tr>
+						<td selected class="tool">
+							<input type="radio" name="tool" value="pen" checked></input>Pen
+						</td>
+						<td class="tool">
+							<input type="radio" name="tool" value="pen"></input> Line
+						</td>
+					</tr>
+					<tr>
+						<td class="tool">
+							<input type="radio" name="tool" value="ellipse"></input> Ellipse
+						</td>
+						<td class="tool">
+							<input type="radio" name="tool" value="rect"></input> Rectangle
+						</td>
+					</tr>
+				</table>
+				<table>
+					<tr>
+						<td class="pen">
+							<table>
+								<tr>
+									<td><input type="radio" name="pen" value='{"0":[0]}' checked></input></td>
+									<td>▓</td>
+								</tr>
+							</table>
+						</td>
+						<td class="pen">
+							<table>
+								<tr>
+									<td><input type="radio" name="pen" value='{"0":[0,1],"1":[0,1]}'></input></td>
+							    <td>▓▓<br>
+							        ▓▓</td>
+								</tr>
+							</table>
+						</td>
+					</tr>
+					<tr>
+						<td class="pen">
+							<table>
+								<tr>
+									<td><input type="radio" name="pen" value='{"-1":[0],"0":[-1,0,1],"1":[0]}'></input></td>
+							    <td> ▓<br>
+							        ▓▓▓<br>
+							         ▓</td>
+								</tr>
+							</table>
+						</td>
+						<td class="pen">
+							<table>
+								<tr>
+									<td><input type="radio" name="pen" value='{"-1":[-1,0,1],"0":[-1,0,1],"1":[-1,0,1]}'></input></td>
+							    <td>▓▓▓<br> 
+							        ▓▓▓<br>
+							        ▓▓▓</td>
+								</tr>
+							</table>
+						</td>
+					</tr>
+					<tr>
+						<td class="pen">
+							<table>
+								<tr>
+									<td><input type="radio" name="pen" value='{"-1":[0,1],"0":[-1,0,1,2],"1":[0,1]}'></input></td>
+							    <td> ▓▓<br>
+							        ▓▓▓▓<br>
+							         ▓▓</td>
+								</tr>
+							</table>
+						</td>
+						<td class="pen">
+							<table>
+								<tr>
+									<td><input type="radio" name="pen" value='{"-1":[-1,0,1,2],"0":[-1,0,1,2],"1":[-1,0,1,2]}'></input></td>
+							    <td>▓▓▓▓<br>
+							        ▓▓▓▓<br>
+							        ▓▓▓▓</td>
+								</tr>
+							</table>
+						</td>
+					</tr>
+					<tr>
+						<td class="pen">
+							<table>
+								<tr>
+									<td><input type="radio" name="pen" value='{"-1":[0,1],"0":[-1,0,1,2],"1":[-1,0,1,2],"2":[0,1]}'></input></td>
+							    <td> ▓▓<br>
+							        ▓▓▓▓<br>
+							        ▓▓▓▓<br>
+							         ▓▓</td>
+								</tr>
+							</table>
+						</td>
+						<td class="pen">
+							<table>
+								<tr>
+									<td><input type="radio" name="pen" value='{"-1":[-1,0,1,2],"0":[-1,0,1,2],"1":[-1,0,1,2],"2":[-1,0,1,2]}'></input></td>
+							    <td>▓▓▓▓<br>
+							        ▓▓▓▓<br>
+							        ▓▓▓▓<br>
+							        ▓▓▓▓</td>
+								</tr>
+							</table>
+						</td>
+					</tr>
+					<tr>
+						<td class="pen">
+							<table>
+								<tr>
+									<td><input type="radio" name="pen" value='{"-1":[-1,0,1],"0":[-2,-1,0,1,2],"1":[-2,-1,0,1,2],"2":[-1,0,1]}'></input></td>
+							    <td> ▓▓▓<br>
+							        ▓▓▓▓▓<br>
+							        ▓▓▓▓▓<br> 
+							         ▓▓▓</td>
+								</tr>
+							</table>
+						</td>
+						<td class="pen">
+							<table>
+								<tr>
+									<td><input type="radio" name="pen" value='{"-1":[-2,-1,0,1,2],"0":[-2,-1,0,1,2],"1":[-2,-1,0,1,2],"2":[-2,-1,0,1,2]}'></td>
+							    <td>▓▓▓▓▓<br> 
+							        ▓▓▓▓▓<br>
+							        ▓▓▓▓▓<br> 
+							        ▓▓▓▓▓</td>
+								</tr>
+							</table>
+						</td>
+					</tr>
+				</table>
+				<label>Filled: </label><input type="checkbox" id="filledCheck" value="filled" ></input>
+			</td>
+			<td>
+				<div>
+					<span id="imageElem"></span>
+				</div>
+				<div>
+					<button id="outBtn">Output Text</button> <button id="undoBtn">Undo</button> <button id="redoBtn">Redo</button>
+				</div>
 
-							</td>
-							<td value='{"-1":[-1,0,1,2],"0":[-1,0,1,2],"1":[-1,0,1,2],"2":[-1,0,1,2]}'>
-								▓▓▓▓<br>
-								▓▓▓▓<br>
-								▓▓▓▓<br>
-								▓▓▓▓
-							</td>
-						</tr>
-						<tr>
-							<td value='{"-1":[-1,0,1],"0":[-2,-1,0,1,2],"1":[-2,-1,0,1,2],"2":[-1,0,1]}'>
-								▓▓▓<br>
-								▓▓▓▓▓<br>
-								▓▓▓▓▓<br>
-								▓▓▓
+			</td>
+		</tr>
+	</table>
+	<div>
+		<textarea id="outTextarea" wrap="off"></textarea>
+	</div>
+	<script src="image.js"></script>
+	<script src="art.js"></script>
+</body>
 
-							</td>
-							<td value='{"-1":[-2,-1,0,1,2],"0":[-2,-1,0,1,2],"1":[-2,-1,0,1,2],"2":[-2,-1,0,1,2]}'>
-								▓▓▓▓▓<br>
-								▓▓▓▓▓<br>
-								▓▓▓▓▓<br>
-								▓▓▓▓▓
-							</td>
-						</tr>
-					</table>
-					<div id = "filled" class="checktool">
-						Filled
-					</div>
-				</td>
-				<td>
-					<div id = "imgdiv">
-						<span id="image" oncontextmenu="return false;"  style='-moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none;'  unselectable='on' onselectstart='return false;'  onmousedown='return false;'></span>
-					</div>
-					<div>
-						<button id = "output">Output Text</button> <button id="undo">Undo</button> <button id="redo">Redo</button>
-					</div>
-
-				</td>
-			</tr>
-		</table>
-		<div>
-			<textarea id="out" wrap="off"></textarea>
-		</div>
-
-		<script src="art.js"></script>
-	</body>
 </html>
